force-app/main/default/objects/OrderItem/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <description>Actual End Date of Order Product.</description>
    <inlineHelpText>Actual End Date</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>