force-app/main/default/objects/OrderItem/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <description>Actual Start Date of Order Product</description>
    <inlineHelpText>Actual Start Date</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>