force-app/main/default/objects/OrderItem/fields/Bill_at_Start_of_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Bill_at_Start_of_Campaign__c</fullName>
    <description>Bill at Start of Campaign</description>
    <formula>SBQQ__QuoteLine__r.Bill_at_Start_of_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill at Start of Campaign</label>
    <type>Checkbox</type>
</CustomField>