force-app/main/default/objects/OrderItem/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <description>Field to capture booth number</description>
    <label>Booth Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>