force-app/main/default/objects/OrderItem/fields/Booth_Size__c.field-meta.xml
<CustomField>
    <fullName>Booth_Size__c</fullName>
    <description>Booth Size</description>
    <label>Booth Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>