force-app/main/default/objects/OrderItem/fields/Impacted_Product_Date__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Product_Date__c</fullName>
    <description>true if products Dates are not per Billing Frequency</description>
    <formula>IF(SBQQ__ProrateMultiplier__c - FLOOR(SBQQ__ProrateMultiplier__c)  = 0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impacted Product Date</label>
    <type>Checkbox</type>
</CustomField>