force-app/main/default/objects/OrderItem/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <description>Only related to the Print Magazine Advert Issue Product.</description>
    <inlineHelpText>Issue Date for a Magazine Issue</inlineHelpText>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>