force-app/main/default/objects/OrderItem/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <description>Sequential Number of on Order Product</description>
    <label>Line Item Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>