force-app/main/default/objects/OrderItem/fields/Linked_Order_Item_for_PC_AI__c.field-meta.xml
<CustomField>
    <fullName>Linked_Order_Item_for_PC_AI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked Order Item lookup for PC/AI Amendment.</description>
    <label>Linked Order Item for PC/AI</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (Linked Order Item for PC/AI)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>