force-app/main/default/objects/OrderItem/fields/No_Invoice__c.field-meta.xml
<CustomField>
    <fullName>No_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will ensure which records are blocked from billing.</description>
    <inlineHelpText>This will ensure which records are blocked from billing.</inlineHelpText>
    <label>No Invoice</label>
    <type>Checkbox</type>
</CustomField>