force-app/main/default/objects/OrderItem/fields/Override_Tax_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Override_Tax_Item_Category__c</fullName>
    <description>Override Tax Item Category</description>
    <label>Override Tax Item Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>