force-app/main/default/objects/OrderItem/fields/Package_Total__c.field-meta.xml
<CustomField>
    <fullName>Package_Total__c</fullName>
    <description>Total Amount</description>
    <label>Package Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>