force-app/main/default/objects/OrderItem/fields/Package_Total_conga__c.field-meta.xml
<CustomField>
    <fullName>Package_Total_conga__c</fullName>
    <description>Total Amount of related quote line.</description>
    <formula>SBQQ__QuoteLine__r.SBQQ__PackageTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Total conga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>