force-app/main/default/objects/OrderItem/fields/ParentSumNetValue__c.field-meta.xml
<CustomField>
    <fullName>ParentSumNetValue__c</fullName>
    <label>ParentSumNetValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>