force-app/main/default/objects/OrderItem/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <description>Payment Term of Product</description>
    <label>Product Edition Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>