force-app/main/default/objects/OrderItem/fields/Payment_Term_used_for_BT_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_used_for_BT_Calculation__c</fullName>
    <description>effective Payment Term used in Billing Transaction Calculation -  it could be from one of the 5 levels :

• Event within 60 days
• Product-Edition level ( Invoice Property and Payment Terms)
• Override at Opportunity(Billing Schedule)/Quote(Payment Term) level
• Account level ( only payment Term)
• Edition Level</description>
    <label>Payment Term used for BT Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>