force-app/main/default/objects/OrderItem/fields/PC_AI_Sub_scenario__c.field-meta.xml
<CustomField>
    <fullName>PC_AI_Sub_scenario__c</fullName>
    <description>this will capture the value for the PC/AI  sub-scenario on the positive and negative lines pair ( for upgrade and downgrade) , on negative line ( product removal)  and on positive lines ( product Addition)</description>
    <label>PC/AI Sub-scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Upgrade</fullName>
            </value>
            <value>
                <fullName>Product Downgrade</fullName>
            </value>
            <value>
                <fullName>Product Addition</fullName>
            </value>
            <value>
                <fullName>Product Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>