force-app/main/default/objects/OrderItem/fields/Pending_Amount_to_be_Billed__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount_to_be_Billed__c</fullName>
    <description>Formula field to show the Amount Pending to be billed</description>
    <formula>(Quantity *  UnitPrice ) -  blng__BilledAmountwithouttax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Amount to be Billed(without tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>