force-app/main/default/objects/OrderItem/fields/Product_Invoice_property__c.field-meta.xml
<CustomField>
    <fullName>Product_Invoice_property__c</fullName>
    <description>Invoice property of Product</description>
    <label>Product Edition Invoice property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>