force-app/main/default/objects/OrderItem/fields/Set_Override_Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Set_Override_Next_Billing_Date__c</fullName>
    <description>Set the override next billing date field based on the End Date automatically If true [IOM-1458]</description>
    <formula>Product2.Set_Override_Next_Billing_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Set Override Next Billing Date</label>
    <type>Checkbox</type>
</CustomField>