force-app/main/default/objects/OrderItem/fields/Source_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Product_Code__c</fullName>
    <description>Product code of Product from source CRM System.</description>
    <label>Source Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>