force-app/main/default/objects/OrderItem/fields/Tobe_Hidden_in_ERP__c.field-meta.xml
<CustomField>
    <fullName>Tobe_Hidden_in_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies the products which are to be marked as hidden in ERP and IOM.</description>
    <label>Tobe Hidden in ERP</label>
    <type>Checkbox</type>
</CustomField>