force-app/main/default/objects/OrderItem/fields/Translated_Alt_ProductName__c.field-meta.xml
<CustomField>
    <fullName>Translated_Alt_ProductName__c</fullName>
    <label>Translated Alt ProductName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>