force-app/main/default/objects/OrderItem/fields/Translated_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Translated_Product_Description__c</fullName>
    <description>Translated Invoice Line Item Description</description>
    <label>Translated Invoice Line Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>