force-app/main/default/objects/OrderItem/fields/Upgrade_Downgrade_Delta_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Downgrade_Delta_Amount__c</fullName>
    <description>This field will capture the Delta amount from the original order product to the upgrade/downgraded order product.</description>
    <label>Upgrade/Downgrade Delta Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>